# face-rabbitmq

./: #README  .gitignore  CMakeLists.txt  Dockerfile  README.md  arc_worker.py  config.py  docker-compose.yml  engine.py  init.sh  run.py  start_detect.py  start_extract.py  start_search.py  test.py  test_mq.py  test_retina.py  utils.py
alignment/: st_align.py
common/: base64.cpp  base64.h
detect_service/: config.py  detect_consumer.py  engine.py
detect_service/alignment/: align.py  st_align.py
detect_service/detection/mtcnn/: mtcnn_detector.py
detect_service/detection/retina_face/: base_utils.py  preprocessing.py
detect_service/detection/retina_face/config/: net_config.py
detect_service/detection/retina_face/nets/: retinaface.py
detection/retina_face/: base_detection.py  transforms.py
extract_service/: engine.py  extract_consumer.py
models/detect/centerface/: centerface.param
rabbitmq/: config.py  consumer.py  consumer_utils.py  publisher.py  setup.py
recognition/arcface_mxnet/: face_embedding.py  face_net.py
search_service/milvus_2x/: engine.py  search_consumer.py
src/: detect_worker.cpp  extract_worker.cpp  face_engine.cpp  face_engine.h  run.sh  test.py  test_similarity.cpp
src/common/: base64.cpp  base64.h  utils.h
src/detection/: detector.cpp  detector.h
src/detection/alignment/: align.cpp  align.h
src/detection/detect_face/centerface/: centerface.cpp  centerface.h
src/detection/detect_face/retinaface/: retinaface.cpp  retinaface.h
src/detection/landmark/insightface/: insightface.cpp  insightface.h
src/extraction/: extractor.cpp  extractor.h
src/extraction/mobilefacenet/: mobilefacenet.cpp  mobilefacenet.h
src/face_mask/: face_mask.cpp  face_mask.h
src/rabbitmq/: CMakeLists.txt
src/rabbitmq/common/: base64.h  base64_test.cpp
src/rabbitmq/example/: CMakeLists.txt  receive_default.cpp  receive_direct.cpp  send_default.cpp  send_direct.cpp
src/rabbitmq/handler/: poco_handler.cpp  poco_handler.h
src/testface/: test_alignment.cpp  test_detect.cpp  test_rabbitmq.cpp
src/utils/: utils.cpp
tools/: wait-rabbitmq.sh
